2010-08-27  Till Kamppeter <till.kamppeter@gmail.com>

	* util.c: In strncpy_tochar() use the isempty() function to check
	  whether the input string is empty (bug #514).

2010-08-10  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.5.

	* VERSION, README, USAGE, configure.ac: Updated for release 4.0.5.

2010-07-07  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Make substitution of zeros by the the user-defined
	  page size in the prototype string for the custom page size
	  working. Before, only substitution of %0 and %1 worked reliably.
	  Thanks to Lutz Sammer (johns98 at web dot de) for reporting this
	  problem (see also bug 514, comment #1).

	* options.c: Make custom page size settings also work if the custom
	  size is set via embedded PostScript code and the comment to mark
	  the selected option setting is only "%% FoomaticRIPOptionSetting:
	  PageSize=Custom", without the size and unit parameters. Thanks to
	  Lutz Sammer for reporting this problem (see also bug 514, comment #1).

2010-07-02  Till Kamppeter <till.kamppeter@gmail.com>

	* spooler.c: Config file for the default printer in spooler-less
	  (direct) printing mode was not read correctly. Thanks to Lutz
	  Sammer (johns98 at web dot de) for reporting this problem (see
	  also bug 514, comment #1).

	* spooler.c: Fixed error message output if a printer's PPD is missing
	  in spooler-less mode. There was a segfault due to the printer name
	  not specified in the _log() function call. Thanks to Lutz Sammer
	  for reporting this problem (see also bug 514, comment #1).

	* util.c: The isempty() function did not consider NULL as an empty
	  string. This caused segfaults when a string is considered non-empty
	  but in fact it is NULL. Thanks to Lutz Sammer for reporting this
	  problem (see also bug 514, comment #1).

	* util.c: strncpy_tochar() did not check whether the input string
	  is empty and returned a pointer one character beyond the input